Add checkIsRedirected method to RevisionParser